--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#FF6200EE</color>
+    <color name="colorPrimaryDark">#FF3700B3</color>
+    <color name="colorPrimaryLight">#FFBB86FC</color>
+    <color name="colorAccent">#FF03DAC5</color>
+    <color name="colorBackground">#FF121212</color>
+    <color name="colorText">#FFFFFFFF</color>
+    <color name="colorTextSecondary">#FFBDBDBD</color>
 </resources>
