--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -11,13 +11,14 @@ android:layout_height="match_parent">
     android:layout_height="wrap_content"
     android:inputType="text"
     android:padding="10sp"
-    android:text="" />
+    android:text=""
+    android:autofillHints="" />
 
 <Button
     android:id="@+id/button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
     android:layout_below="@+id/edittext"
     android:padding="10sp"
     android:text="Search Google" />
@@ -37,9 +38,10 @@ android:layout_height="match_parent">
     android:layout_height="fill_parent"
     android:scrollbars = "vertical"
     android:maxLines="1000"
-    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
     android:padding="10sp"
     android:text="Result" />
+
 
 
 
