--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/green"
+    >
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="95dp"
-        android:layout_height="46dp"
+        android:layout_width="163dp"
+        android:layout_height="60dp"
+        android:fontFamily="@font/quicksand_bold"
+        android:gravity="center"
         android:text="Log In"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#221e22"
@@ -26,6 +30,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="180dp"
         android:ems="10"
+        android:fontFamily="@font/quicksand_regular"
         android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +45,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:fontFamily="@font/quicksand_regular"
         android:hint="Password"
         android:inputType="textPassword"
         android:textColorHint="#757575"
@@ -80,7 +86,7 @@
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:background="@drawable/ripple_effect"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/quicksand_semibold"
         android:gravity="center"
         android:text="Sign In"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -100,7 +106,7 @@
         android:layout_height="42dp"
         android:layout_marginBottom="132dp"
         android:background="@drawable/ripple_effect"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/quicksand_semibold"
         android:gravity="center"
         android:text="Register"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
