--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,130 +4,144 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary_green"
     tools:context=".MainActivity"
-    android:background="@color/green"
     >
+
+    <RelativeLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="338dp"
+        android:layout_height="455dp"
+        android:layout_marginBottom="64dp"
+        android:background="@drawable/shape_login_panel"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        >
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="163dp"
         android:layout_height="60dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/quicksand_bold"
         android:gravity="center"
         android:text="Log In"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#221e22"
-        app:layout_constraintBottom_toTopOf="@+id/emailAddress"
+        android:textColor="@color/Secondary_green"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.659" />
+        />
 
     <EditText
         android:id="@+id/emailAddress"
         android:layout_width="290dp"
         android:layout_height="48dp"
-        android:layout_marginTop="180dp"
-        android:ems="10"
-        android:fontFamily="@font/quicksand_regular"
+        android:autofillHints=""
+        android:textSize="14dp"
+        android:layout_marginTop="80dp"
+        android:textColorHint="@color/primary_green"
+        android:fontFamily="@font/quicksand_medium"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="290dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:fontFamily="@font/quicksand_regular"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textColorHint="#757575"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.475"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
-        android:autofillHints="" />
+    <!--    <Button-->
+    <!--        android:id="@+id/login"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="sign in"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="0.498"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
+    <!--        app:layout_constraintVertical_bias="0.052"-->
+    <!--        android:background="@drawable/ripple_effect"/>-->
 
-<!--    <Button-->
-<!--        android:id="@+id/login"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="sign in"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.498"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
-<!--        app:layout_constraintVertical_bias="0.052"-->
-<!--        android:background="@drawable/ripple_effect"/>-->
-
-<!--    <Button-->
-<!--        android:id="@+id/register"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="96dp"-->
-<!--        android:background="@drawable/ripple_effect"-->
-<!--        android:text="not a member? Register"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.497"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/login" />-->
+    <!--    <Button-->
+    <!--        android:id="@+id/register"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginTop="96dp"-->
+    <!--        android:background="@drawable/ripple_effect"-->
+    <!--        android:text="not a member? Register"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="0.497"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/login" />-->
 
 
     <TextView
         android:id="@+id/signin"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:background="@drawable/ripple_effect"
+        android:layout_width="290dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/quicksand_semibold"
         android:gravity="center"
+        android:background="@drawable/rounded_corner"
+        android:textColor="@color/white"
         android:text="Sign In"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#FFFF"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.452" />
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
         android:id="@+id/register"
-        android:layout_width="120dp"
+        android:layout_width="290dp"
         android:layout_height="42dp"
-        android:layout_marginBottom="132dp"
-        android:background="@drawable/ripple_effect"
+        android:layout_marginBottom="80dp"
         android:fontFamily="@font/quicksand_semibold"
         android:gravity="center"
+        android:background="@drawable/rounded_corner"
+        android:textColor="@color/white"
         android:text="Register"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#FFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="29dp"
         android:layout_height="20dp"
         android:gravity="center"
-        android:text="-or-"
+        android:textSize="14dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/Secondary_green"
+        android:fontFamily="@font/quicksand_medium"
+        android:text="or"
         app:layout_constraintBottom_toTopOf="@+id/register"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signin"
-        app:layout_constraintVertical_bias="0.531" />
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/signin" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="290dp"
+        android:layout_height="48dp"
+        android:autofillHints=""
+        android:fontFamily="@font/quicksand_medium"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textSize="14dp"
+        android:layout_marginTop="14dp"
+        android:textColorHint="@color/primary_green"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
