--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="warm_white">#F8EBDF</color>
+    <color name="white">#DCE6DD</color>
     <color name="colorPrimary">#FF6200EE</color>
     <color name="colorPrimaryDark">#FF3700B3</color>
     <color name="colorPrimaryLight">#FFBB86FC</color>
@@ -24,6 +25,10 @@
     <color name="dark_orange">#FA9284</color>
     <color name="dark_green">#6AAB9C</color>
     <color name="green">#6FC2AF</color>
+    <color name="button_green">#68926B</color>
+    <color name="Secondary_green">#274B28</color>
+    <color name="primary_green">#93BBA5</color>
+
     <!--Theme Color range-->
     <color name="night_mode">#6124B1</color>
     <color name="notifications">#13B2C3</color>
