--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,23 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="232dp"
             android:text="Forgot password?" />
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/googleSignInButton"
+            android:layout_width="288dp"
+            android:layout_height="42dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="23dp"
+            android:layout_marginBottom="22dp"
+
+            android:gravity="center"
+            android:text="Sign in with Google"
+            android:fontFamily="@font/quicksand_semibold" />
+
     </RelativeLayout>
 
     <TextView
