--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -32,15 +32,19 @@ android:layout_height="match_parent">
 
 
     <TextView
-    android:id="@+id/textView1"
-    android:layout_below="@+id/pb_loading_indicator"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:scrollbars = "vertical"
-    android:maxLines="1000"
-    android:layout_alignParentStart="true"
-    android:padding="10sp"
-    android:text="Result" />
+        android:id="@+id/textView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/pb_loading_indicator"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="144dp"
+        android:maxLines="1000"
+        android:padding="10sp"
+        android:scrollbars="vertical"
+        android:text="Result" />
 
     <Button
         android:id="@+id/button2"
@@ -51,6 +55,18 @@ android:layout_height="match_parent">
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="Explore Price" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="78dp"
+        android:layout_marginBottom="16dp"
+        android:layout_toStartOf="@+id/button2"
+        android:text="Checklist" />
 
 
 </RelativeLayout>
