--- a/app/src/main/res/layout/activity_checklist_page.xml
+++ b/app/src/main/res/layout/activity_checklist_page.xml
@@ -46,4 +46,14 @@
         android:fontFamily="@font/quicksand_bold"
         android:textSize="30sp"
         />
+
+    <Button
+        android:id="@+id/ExpPrices"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Explore Prices"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
