--- a/app/src/main/res/layout/each_item.xml
+++ b/app/src/main/res/layout/each_item.xml
@@ -69,19 +69,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/child_rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <ListView
-                android:id="@+id/listView"
-                android:layout_width="match_parent"
-                android:layout_height="443dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="198dp"
-                android:layout_marginBottom="-4dp" />
+                android:layout_height="match_parent" />
 
         </RelativeLayout>
     </LinearLayout>
