Fuck this shit (#3)
* Merged V1.0

* Fixed total price ~ak

Co-authored-by: Yashism <yashvwaghmare2002@gmail.com>

--- a/app/src/main/res/layout/activity_product_search.xml
+++ b/app/src/main/res/layout/activity_product_search.xml
@@ -17,8 +17,7 @@ android:layout_height="match_parent">
         android:layout_marginBottom="67dp"
         android:maxLines="1000"
         android:padding="10sp"
-        android:scrollbars="vertical"
-        />
+        android:scrollbars="vertical" />
 
     <Button
         android:id="@+id/button2"
