--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,35 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_green"
-    tools:context=".MainActivity"
-    >
+    tools:context=".MainActivity">
+
 
     <RelativeLayout
         android:id="@+id/linearLayout"
-        android:layout_width="332dp"
-        android:layout_height="447dp"
-        android:layout_marginBottom="64dp"
+        android:layout_width="329dp"
+        android:layout_height="317dp"
+        android:layout_marginBottom="160dp"
         android:background="@drawable/shape_login_panel"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.289">
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <EditText
             android:id="@+id/emailAddress"
             android:layout_width="290dp"
             android:layout_height="48dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginStart="19dp"
             android:layout_marginTop="80dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="19dp"
             android:autofillHints=""
             android:fontFamily="@font/quicksand_medium"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:textColorHint="@color/black"
+            android:textColorHint="@color/primary_green"
             android:textSize="14dp" />
 
         <TextView
@@ -41,34 +42,34 @@
             android:layout_width="290dp"
             android:layout_height="48dp"
 
+            android:layout_below="@+id/emailAddress"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="38dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="213dp"
+            android:layout_marginStart="19dp"
+            android:layout_marginTop="47dp"
+            android:layout_marginEnd="19dp"
+            android:layout_marginBottom="80dp"
             android:background="@drawable/rounded_corner"
             android:fontFamily="@font/quicksand_semibold"
             android:gravity="center"
             android:text="Send email"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/black" />
+            android:textColor="@color/Secondary_green" />
 
 
     </RelativeLayout>
-
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="286dp"
         android:layout_height="57dp"
-        android:layout_marginTop="48dp"
         android:fontFamily="@font/quicksand_bold"
         android:gravity="center"
         android:text="Reset Password"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/Secondary_green"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
