--- a/app/src/main/res/layout/activity_checklist_page.xml
+++ b/app/src/main/res/layout/activity_checklist_page.xml
@@ -53,7 +53,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
-        android:text="Backend"
+        android:text="Explore Prices"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
